@@ -26,7 +26,7 @@ OBJS=aln.o badwords.o bsd.o channel.o cloak.o crule.o dbuf.o \
 	match.o modules.o packet.o parse.o $(REGEX) res.o \
 	res_init.o res_comp.o res_mkquery.o res_skipname.o s_auth.o \
 	s_bsd.o s_conf.o s_debug.o s_err.o s_extra.o s_kline.o \
-	s_misc.o s_numeric.o s_serv.o s_socks.o s_svs.o $(STRTOUL) ssl.o s_unreal.o \
+	s_misc.o s_numeric.o s_serv.o s_svs.o $(STRTOUL) ssl.o s_unreal.o \
 	s_user.o scache.o send.o support.o version.o webtv.o \
 	whowas.o zip.o
 
@@ -176,9 +176,6 @@ s_bsd.o: s_bsd.c ../include/dbuf.h $(INCLUDES)
 
 s_auth.o: s_auth.c ../include/dbuf.h $(INCLUDES)
 	$(CC) $(CFLAGS) -c s_auth.c
-
-s_socks.o: s_socks.c ../include/dbuf.h $(INCLUDES)
-	$(CC) $(CFLAGS) -c s_socks.c
 
 s_conf.o: s_conf.c ../include/dbuf.h $(INCLUDES)
 	$(CC) $(CFLAGS) -c s_conf.c
