@@ -573,3 +573,4 @@ seen. gmtime warning still there
 - Made blackhole.so work
 - Fixed a set_non_blocking bug
 - Fixed a codemastr screwup in quarantine code
+- Removed the old SOCKS check code.
